# fastapi-template

./: .env.example  pyproject.toml
src/: config.py  main.py
src/models/: __init__.py
